# qt-countdown-timer

./: CMakeLists.txt  README.md  main.cpp
